# a-share-platform-stocks-selection

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  pyproject.toml
api/: requirements.txt
