[project]
name = "a-share-platform-stocks-selection"
version = "0.1.0"
description = "本项目是一个专注于股票平台期识别的扫描工具，能够通过技术分析方法自动识别处于平台期的股票，并提供可视化分析结果。"
requires-python = ">=3.10"
dependencies = [
    "baostock<=0.8.9",
    "colorama>=0.4.6",
    "fastapi>=0.100.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "pydantic>=1.10.0",
    "python-dotenv>=1.1.1",
    "scipy>=1.15.3",
    "tqdm>=4.64.0",
    "uvicorn>=0.20.0",
]
